Assets/css/style.css
:root {
    --color1: rgba(255, 213, 129, 0.802);
    --color2:  rgb(252, 217, 104);
    --color3:  rgb(255, 186, 47);
    --color4:  rgba(84, 42, 162, 0.479);
    --color5:  rgb(0, 0, 0);
    --color6: rgba(40, 30, 30, 0.728);
    --buttoncolor: rgba(84, 42, 162, 0.775);
    --boxwidth: auto;
    --sectionwidth: auto;
    --bordertype: 1px solid whitesmoke;
    --firstransition: .5s ease;
}
   header {
    position: absolute;
    display: flex;
    display: block;
    left: 0;
    width: 100%;
    color: rgb(255, 255, 255);
    text-align: center;
    background-color: var(--color5);
   }

   header h1 {
    padding-top: 1.5em;
    font-size: 400%;
    backface-visibility: hidden;
   }

   .HiddenPic {
height: 10em;   
display: flex;
display: block;
justify-content: center;
flex: 1 0 30; 
width: 100%;
background-image: url(/Users/emily/Downloads/CU-VIRT-FSF-PT-10-2022-U-LOLC-main/02-Advanced-CSS/02-Challenge/Assets/images/profilepic.jpg);
background-repeat: no-repeat;   
background-position-y: 15%;

}

    a {
    text-decoration: none;
    color: rgba(255, 235, 205, 0.724);
}

   .background-image {
    position: fixed;
    z-index: -1;
    padding: 100vh;
    background-image: url("/Users/emily/Downloads/CU-VIRT-FSF-PT-10-2022-U-LOLC-main/02-Advanced-CSS/02-Challenge/Assets/images/aus2.jpg");
    background-size: cover;
    width: 100vh;
    opacity: 1;
   }

   nav {
    position: fixed;
    background-color: var(--color5);
    top: 0;
    width: 100%;
    border-top: var(--bordertype);
    border-bottom: var(--bordertype);
    z-index: 2;
}

    nav ul {
    text-align: center;

}

    nav ul li {
    text-align: center;
    text-transform: uppercase;
    display: flex;
    display: inline-flex;
    overflow: hidden;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

    nav li a {
    padding: 1em .5em;
    text-decoration: none;
    color: antiquewhite;
}

    ul li:not(:last-child) {
    border-right: 1px solid whitesmoke;
}

    li:hover {
    background-color: var(--color6);
    transition: var(--firstransition);
}



    main {
    margin-top: 42%;
    display: flex;
    vertical-align: center;
}

    aside {
    position: absolute;
    display: flex;
    width: 40%;
    height: auto;
    padding-top: 10em;
    box-shadow: inset 10px 0 15px -10px var(--color5);
    color: #000;
}


    .label {
        display: flex;
\       flex-wrap: wrap;
        padding: 5%;
        box-shadow: 0px 0px 10px var(--color4) inset;
        border: 0 solid black;
        border-radius: 50%;
}

  section {
    border: 2px dashed gray;
    border-radius: 10px;
    padding: 1em;
    width: var(--sectionwidth);
   }

    div {
    padding-block: 1px;
}

   footer{
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    color: rgb(245, 244, 244);
    text-align: center;
}



.label:hover {
  background-color: var(--color4);
  color: #fff;
  transition: var(--firstransition);
}

.label:active {
  font-size: 110%;
  box-shadow: 0 0 10px rgb(120, 3, 255) inset;
  background-color: var(--buttoncolor);
  transition: var(--firstransition);
}

.label:focus {
  outline: none;
  border-color: #8ac4ff;
}








/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (max-width: 600px) {
    main {
        transition: 1s ease-in-out;
        flex-direction: column;
        margin-top: 75%;}
    .label {
        padding-top: 100%;
        width: 100%;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (max-width: 768px) {
    body {
        width: 100%;
    }
    main {
        display: grid;
        width: 100%;
        grid-template-columns: repeat(2, 1fr);
    }

}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (max-width: 992px) {
    body {
        width: 100%;
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {...}

